--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,58 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset = "UTF-8">
-  <title>Instagram</title>
-  <link rel = "stylesheet" type = "text/css" href = "css/main.css">
-</head>
-<body>
-  <header>
-   <!---Instagram--->
-  <section class = "contenedor-1 box">
-  <div class = "logo box"><img class = "logo" src = "images/brand.png"></div>
-  <div class = "box"><button class = "button" type = "button"><img class = "middle" src = "images/home.png">&nbsp Log in</button></div>
-  </section>
-  <img class = "tile" src = "images/bgtile.png">
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Instagram</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+  </head>
+  <body>
+    <header>
+      <!---Instagram--->
+      <section class="contenedor-1 box">
+        <div class="logo box"><img class="logo" src="images/brand.png" /></div>
+        <div class="box">
+          <button class="button" type="button">
+            <img class="middle" src="images/home.png" />&nbsp Log in
+          </button>
+        </div>
+      </section>
+      <img class="tile" src="images/bgtile.png" />
+    </header>
 
-  <section class = "contenedor-2 box">
-      <img src = "images/phones.png">
-  </section>
+    <section class="contenedor-2 box">
+      <img src="images/phones.png" />
+    </section>
 
-  <section class = "contenedor-3 box">
-    <div class = "title">
-  <h1>Capture and Share the World's Moments</h1>
-  </div>
-  <div class = "text">
-  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
-  
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+    <section class="contenedor-3 box">
+      <div class="title">
+        <h1>Capture and Share the World's Moments</h1>
+      </div>
+      <div class="text">
+        <p>
+          Instagram is a <strong>fast, beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and
+          family.<br /><br />
 
-  Oh yeah, did we mention it's free?</p><br>
-  </div>
-  <!--Download on the App Store-->
-  <a href = "https://itunes.apple.com/es/app/instagram/id389801252?mt=8" target = "_blank"><img class = "col-2" src = "images/badge-iphone.png"></a>
-  <!--Get it on Google Play-->
-  <a href = "https://play.google.com/store/apps/details?id=com.instagram.android&hl=es" target = "_blank"><img class = "col-2 img-android" src = "images/badge-android.png"></a>
-  
-  </section>
-  
-  <footer>
-    <div class = "links">
-    <ul>
-  <li class = "no-list box"><a href = "#">About Us</a></li>
-  <li class = "no-list box"><a href = "#">Support</a></li>
-  <li class = "no-list box"><a href = "#">Blog</a></li>
-  <li class = "no-list box"><a href = "#">Press</a></li>
-  <li class = "no-list box"><a href = "#">API</a></li>
-  <li class = "no-list box"><a href = "#">Jobs</a></li>
-  <li class = "no-list box"><a href = "#">Privacy</a></li>
-  <li class = "no-list box"><a href = "#">Terms</a></li>
-    </ul>
-    </div>
-    <div class = "copy">
-  <p>&copy; 2014 Instagram</p><br><br>
-  </div>
-  </footer>
-</body>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.<br /><br />
+
+          Oh yeah, did we mention it's free?
+        </p>
+        <br />
+      </div>
+      <!--Download on the App Store-->
+      <a
+        href="https://itunes.apple.com/es/app/instagram/id389801252?mt=8"
+        target="_blank"
+        ><img class="col-2" src="images/badge-iphone.png"
+      /></a>
+      <!--Get it on Google Play-->
+      <a
+        href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es"
+        target="_blank"
+        ><img class="col-2 img-android" src="images/badge-android.png"
+      /></a>
+    </section>
+
+    <footer>
+      <div class="links">
+        <ul>
+          <li class="no-list box"><a href="#">About Us</a></li>
+          <li class="no-list box"><a href="#">Support</a></li>
+          <li class="no-list box"><a href="#">Blog</a></li>
+          <li class="no-list box"><a href="#">Press</a></li>
+          <li class="no-list box"><a href="#">API</a></li>
+          <li class="no-list box"><a href="#">Jobs</a></li>
+          <li class="no-list box"><a href="#">Privacy</a></li>
+          <li class="no-list box"><a href="#">Terms</a></li>
+        </ul>
+      </div>
+      <div class="copy">
+        <p>&copy; 2014 Instagram</p>
+        <br /><br />
+      </div>
+    </footer>
+  </body>
 </html>
