--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -28,7 +28,7 @@
         </header>
         
         <section>
-          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
         </section>
