Add links to the footer bar

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -45,14 +45,14 @@
 
   <footer>
     <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
+      <li><a href="https://www.instagram.com/about/us/" target="_blank">About Us</a></li>
+      <li><a href="https://help.instagram.com/" target="_blank" >Support</ahref></li>
+      <li><a href="https://business.instagram.com/blog?" target="_blank" >Blog</a></li>
+      <li><a href="https://instagram-press.com/" target="_blank" >Press</a></li>
+      <li><a href="https://www.instagram.com/developer/" target="_blank" >API</a></li>
+      <li><a href="https://www.instagram.com/about/jobs/" target="_blank" >Jobs</a></li>
+      <li><a href="https://help.instagram.com/519522125107875" target="_blank" >Privacy</a></li>
+      <li><a href="https://help.instagram.com/581066165581870" target="_blank" >Terms</a></li>
       <li id="copyright" >&copy; 2014 Instagram</li>
     </ul>
   </footer>
