Avanzando en el CSS, ya está casi todo en su sitio

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Instagram</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="./css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+  </head>
 
-<head>
-  <title>Instagram</title>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" type="text/css" href="./css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="./css/main.css" />
-</head>
+  <body>
+    <main>
+      <div class="container">
+        <div id="phones">
+          <img src="images/phones.png" alt="Instagram Phones" />
+        </div>
+        <div id="login">
+          <img src="images/brand.png" alt="Instagram" />
+          <button id="login-button" class="button">
+            <img src="images/home.png" alt="home" />
+            <span>Log in</span>
+          </button>
+        </div>
+        <div id="text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
 
-<body>
-<main>
-  <div class="container">
-    <div id="phones">
-      <img src="images/phones.png" alt="Instagram Phones">
-    </div>
-    <div id="login">
-      <img src="images/brand.png" alt="Instagram"/>
-      <button id="login-button" class="button">
-        <img src="images/home.png" alt="home"/>
-        <span>Log in</span>
-      </button>
-    </div>
-    <div id="text">
-      <h2>Capture and Share the World's Moments</h2>
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-      <p>Oh yeah, did we mention it's free?</p>
+          <img src="images/badge-iphone.png" alt="App Store" />
+          <img src="images/badge-android.png" alt="App Store" />
+        </div>
+        <div class="clear"></div>
+      </div>
+    </main>
 
-      <img src="images/badge-iphone.png" alt="App Store"/>
-      <img src="images/badge-android.png" alt="App Store"/>
-
-    </div>
-    <div class="clear"></div>
-  </div>
-</main>
-<footer>
-  <div class="container footer">
-    About Us
-    Support
-    Blog
-    Press
-    API
-    Jobs
-    Privacy
-    Terms
-
-    &copy; 2014 Instagram
-  </div>
-</footer>
-</body>
-
+    <footer>
+      <div class="container footer">
+        About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+      </div>
+    </footer>
+  </body>
 </html>
