Adds main content styles

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,19 +18,21 @@
                 <img src="images/phones.png" alt="A pair of phones showing the app in use">
             </div>
             <div class="main-content-wrapper">
-                <div class="header">
-                    <h1 class="header__main-logo">Instagram</h1>
+                <div class="header clearfix">
+                    <h1 class="header__main-logo img-replacement">Instagram</h1>
                     <a class="header__log-in-btn" href="#">Log in</a>
                 </div>
                 <section class="page-description">
-                    <h2 class="page-description__title">Capture and Share the World's Moments</h2>
+                    <h2 class="page-description__title">Capture and Share <br> the World's Moments</h2>
 
                     <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
                     <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
                     <p>Oh yeah, did we mention it's free?</p>
 
-                    <a class="app_store_btn" href="#">Download on the App Store</a>
-                    <a class="google_play_btn" href="#">Get it on Google Play</a>
+                    <div class="download-btns">
+                        <a class="app-store-btn img-replacement" href="#">Download on the App Store</a>
+                        <a class="google-play-btn img-replacement" href="#">Get it on Google Play</a>
+                    </div>
                 </section>
             </div>
         </div>
@@ -38,7 +40,7 @@
     <!--MAIN::[END]-->
 
     <!--FOOTER::[START]-->
-    <footer>
+    <footer class="main-footer">
         <nav class="footer-nav">
             <ul>
                 <li>
