--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,9 +9,7 @@
     <title>Instagram</title>
   </head>
   <body>
-    <header>
-      <div class="header-container"></div>
-    </header>
+    <header><div class="header-container"></div></header>
     <main>
       <section>
         <div class="phones-container">
@@ -33,21 +31,18 @@
             <h2>Capture and Share <br />the World's Moments</h2>
             <div class="text-info-container">
               <p>
-                Instagram is a <strong>fast</strong>, beautiful and fun way to
-                share your life with friends and family.
+                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life 
+                <br>with friends and family.
               </p>
               <p>
                 Take a picture or video, choose a filter to transform its look
-                and feel, then post to Instagram &mdash; it's that easy. You can
-                even share to Facebook, Twitter, Tumblr and more. It's a new way
-                to see the world.
+                <br>and feel, then post to Instagram &mdash; it's that easy. You can
+                <br>even share to Facebook, Twitter, Tumblr and more. It's 
+                <br>a new way to see the world.
               </p>
               <p>Oh yeah, did we mention it's free?</p>
             </div>
-            <img
-              src="images/badge-iphone.png"
-              alt="Apple Store logo"
-            />
+            <img src="images/badge-iphone.png" alt="Apple Store logo" />
             <img
               id="store-android-img"
               src="images/badge-android.png"
@@ -57,7 +52,7 @@
         </div>
       </section>
     </main>
-    <div class="clear-both"></div>
+    <div class="wall-container"></div>
     <footer>
       <div class="footer-container">
         <ul>
