Rename classes to make sense with parent class

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,19 +17,20 @@
             <div class="main-img-wrapper">
                 <img src="images/phones.png" alt="A pair of phones showing the app in use">
             </div>
+
             <div class="main-content-wrapper">
                 <div class="content-header clearfix">
                     <h1 class="content-header__main-logo img-replacement">Instagram</h1>
                     <a class="content-header__log-in-btn" href="#">Log in</a>
                 </div>
-                <section class="page-description">
-                    <h2 class="page-description__title">Capture and Share <br> the World's Moments</h2>
-                    <div class="page-description__text">
+                <section class="content-description">
+                    <h2 class="content-description__title">Capture and Share <br> the World's Moments</h2>
+                    <div class="content-description__text">
                         <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
                         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
                         <p>Oh yeah, did we mention it's free?</p>
                     </div>
-                    <div class="page-description__download-btns">
+                    <div class="content-description__download-btns">
                         <a class="app-store-btn img-replacement" href="#">Download on the App Store</a>
                         <a class="google-play-btn img-replacement" href="#">Get it on Google Play</a>
                     </div>
