--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <title>Instagram</title>
+  </head>
 
-  Capture and Share the World's Moments
+  <body>
+    <img src="images/phones.png" alt="Phone with Instagram App" />
+    <img src="images/brand.png" alt="Instagram" />
+    <div class="textbox">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      Capture and Share the World's Moments<br />
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share
+      your life with friends and family.<br />
 
-  Oh yeah, did we mention it's free?
+      Take a picture or video, choose a filter to transform its look and feel,
+      then post to Instagram &mdash; it's that easy. You can even share to
+      Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <br />
 
-  Download on the App Store
-  Get it on Google Play
+      Oh yeah, did we mention it's free?<br />
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <img src="images/badge-iphone.png" alt="Download on the App Store" />
+      <img src="images/badge-android.png" alt="Get it on Google Play" />
+    </div>
 
-  &copy; 2014 Instagram
-</body>
+    <nav>
+      <ul id="ulist">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </body>
 </html>
