Wrapping main content inside an article tag

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,11 +18,11 @@
                 <img src="images/phones.png" alt="A pair of phones showing the app in use">
             </div>
 
-            <div class="main-content-wrapper">
-                <div class="content-header clearfix">
+            <article class="main-content-wrapper">
+                <header class="content-header clearfix">
                     <h1 class="content-header__main-logo img-replacement">Instagram</h1>
                     <a class="content-header__log-in-btn" href="#">Log in</a>
-                </div>
+                </header>
                 <section class="content-description">
                     <h2 class="content-description__title">Capture and Share <br> the World's Moments</h2>
                     <div class="content-description__text">
@@ -35,7 +35,7 @@
                         <a class="google-play-btn img-replacement" href="#">Get it on Google Play</a>
                     </div>
                 </section>
-            </div>
+            </article>
         </div>
     </main>
     <!--MAIN::[END]-->
