Removes nav tag in footer

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -42,34 +42,32 @@
 
     <!--FOOTER::[START]-->
     <footer class="main-footer">
-        <nav class="footer-nav">
-            <ul>
-                <li>
-                    <a href="">About Us</a>
-                </li>
-                <li>
-                    <a href="">Support</a>
-                </li>
-                <li>
-                    <a href="">Blog</a>
-                </li>
-                <li>
-                    <a href="">Press</a>
-                </li>
-                <li>
-                    <a href="">API</a>
-                </li>
-                <li>
-                    <a href="">Jobs</a>
-                </li>
-                <li>
-                    <a href="">Privacy</a>
-                </li>
-                <li>
-                    <a href="">Terms</a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="footer-nav">
+            <li>
+                <a href="">About Us</a>
+            </li>
+            <li>
+                <a href="">Support</a>
+            </li>
+            <li>
+                <a href="">Blog</a>
+            </li>
+            <li>
+                <a href="">Press</a>
+            </li>
+            <li>
+                <a href="">API</a>
+            </li>
+            <li>
+                <a href="">Jobs</a>
+            </li>
+            <li>
+                <a href="">Privacy</a>
+            </li>
+            <li>
+                <a href="">Terms</a>
+            </li>
+        </ul>
         <small class="copyright-print">&copy; 2014 Instagram</small>
     </footer>
     <!--FOOTER::[END]-->
