--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,27 +7,34 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <title>Instagram</title>
   </head>
-
+  <div class="background-blue"></div>
   <body>
-    <img src="images/phones.png" alt="Phone with Instagram App" />
-    <img src="images/brand.png" alt="Instagram" />
-    <div class="textbox">
+    <div class="background-white"></div>
+    <div id="main-container">
+      <div id="phone">
+        <img src="images/phones.png" alt="Phone with Instagram App" />
+      </div>
+      <div id="rightbox">
+        <img src="images/brand.png" alt="Instagram" />
+        <div id="text">
+        <h1>Capture and Share the World's Moments</h1>
 
-      Capture and Share the World's Moments<br />
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share
+        your life with friends and family.<br /></p>
 
-      Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share
-      your life with friends and family.<br />
+        <p>Take a picture or video, choose a filter to transform its look and feel,
+        then post to Instagram &mdash; it's that easy. You can even share to
+        Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br /></p>
 
-      Take a picture or video, choose a filter to transform its look and feel,
-      then post to Instagram &mdash; it's that easy. You can even share to
-      Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-      <br />
+        <p>Oh yeah, did we mention it's free?<br /></p>
 
-      Oh yeah, did we mention it's free?<br />
-
-      <img src="images/badge-iphone.png" alt="Download on the App Store" />
-      <img src="images/badge-android.png" alt="Get it on Google Play" />
+        <img src="images/badge-iphone.png" alt="Download on the App Store" />
+        <img src="images/badge-android.png" alt="Get it on Google Play" />
+      </div>
+      </div>
     </div>
+
+    <div class="clear"></div>
 
     <nav>
       <ul id="ulist">
