--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,7 +17,10 @@
     <div id="right-side">
       <div id="title"> 
         <img id="brand" src="images/brand.png" alt="Instagram brand">
-        <button id="login">Log in</button>
+        <button id="login">
+            <img src="images/home.png">
+            <span>Log in</span> 
+        </button>
       </div>
       <div class="clear"></div>
       <div id="frame">
