text background must be white, gonna do some bIG CHANGES

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,16 +8,17 @@
     <title>Instagram</title>
   </head>
   <div class="background-blue"></div>
+  <div class="background-white"></div>
   <body>
-    <div class="background-white"></div>
     <div id="main-container">
       <div id="phone">
         <img src="images/phones.png" alt="Phone with Instagram App" />
       </div>
+      <div class="underwhite">
       <div id="rightbox">
         <img src="images/brand.png" alt="Instagram" />
         <div id="text">
-        <h1>Capture and Share the World's Moments</h1>
+        <h1>Capture and Share<br>the World's Moments</h1>
 
         <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share
         your life with friends and family.<br /></p>
@@ -32,6 +33,7 @@
         <img src="images/badge-android.png" alt="Get it on Google Play" />
       </div>
       </div>
+    </div>
     </div>
 
     <div class="clear"></div>
