nav bar. missing logo+log-in button and white background in text

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,26 +14,52 @@
       <div id="phone">
         <img src="images/phones.png" alt="Phone with Instagram App" />
       </div>
-      <div class="underwhite">
-      <div id="rightbox">
-        <img src="images/brand.png" alt="Instagram" />
-        <div id="text">
-        <h1>Capture and Share<br>the World's Moments</h1>
+      <div id="right-side">
+        <div class="over-box">
+          <div id="logo">
+            <img src="images/brand.png" alt="Instagram" />
+          </div>
+          <div id="log-in-button">
+            <a href="#"
+              ><img src="images/home.png" alt="log-in-button" /> Log in</a
+            >
+          </div>
+        </div>
+        <div class="underwhite">
+          <div id="white-box">
+            <div id="white-box-content">
+              <h1>Capture and Share<br />the World's Moments</h1>
 
-        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share
-        your life with friends and family.<br /></p>
+              <p>
+                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way
+                to share your life with friends and family.<br />
+              </p>
 
-        <p>Take a picture or video, choose a filter to transform its look and feel,
-        then post to Instagram &mdash; it's that easy. You can even share to
-        Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br /></p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.<br />
+              </p>
 
-        <p>Oh yeah, did we mention it's free?<br /></p>
+              <p>Oh yeah, did we mention it's free?<br /></p>
 
-        <img src="images/badge-iphone.png" alt="Download on the App Store" />
-        <img src="images/badge-android.png" alt="Get it on Google Play" />
+              <a href="#"
+                ><img
+                  src="images/badge-iphone.png"
+                  alt="Download on the App Store"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="images/badge-android.png"
+                  alt="Get it on Google Play"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
-      </div>
-    </div>
     </div>
 
     <div class="clear"></div>
