--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -43,19 +43,20 @@
               </p>
 
               <p>Oh yeah, did we mention it's free?<br /></p>
-
-              <a href="#"
-                ><img
-                  src="images/badge-iphone.png"
-                  alt="Download on the App Store"
-                />
-              </a>
-              <a href="#">
-                <img
-                  src="images/badge-android.png"
-                  alt="Get it on Google Play"
-                />
-              </a>
+              <div class="download-buttons">
+                <a href="#"
+                  ><img
+                    src="images/badge-iphone.png"
+                    alt="Download on the App Store"
+                  />
+                </a>
+                <a href="#">
+                  <img
+                    src="images/badge-android.png"
+                    alt="Get it on Google Play"
+                  />
+                </a>
+              </div>
             </div>
           </div>
         </div>
