--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -24,8 +24,8 @@
         <div class="main-container">
           <img class="logo-img" src="images/brand.png" alt="Instagram logo" />
           <div class="home-container beveled">
-            <img class="home-img" src="images/home.png" alt="Home icon" />
-            <h3>Log in</h3>
+            <img src="images/home.png" alt="Home icon" />
+            <h3 id="home-text">Log in</h3>
           </div>
           <div class="info-container">
             <h2>Capture and Share <br />the World's Moments</h2>
