--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,41 +13,33 @@
     <main>
       <section>
         <div class="phones-container">
-          <img
-            id="phones-img"
-            src="images/phones.png"
-            alt="Phones with Instagram app"
-          />
+          <img src="images/phones.png" alt="Phones with Instagram app" />
         </div>
       </section>
       <section>
         <div class="main-container">
-          <img class="logo-img" src="images/brand.png" alt="Instagram logo" />
+          <img src="images/brand.png" alt="Instagram logo" />
           <div class="home-container beveled">
             <img src="images/home.png" alt="Home icon" />
-            <h3 id="home-text">Log in</h3>
+            <h3>Log in</h3>
           </div>
           <div class="info-container">
             <h2>Capture and Share <br />the World's Moments</h2>
             <div class="text-info-container">
               <p>
-                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life 
-                <br>with friends and family.
+                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way
+                to share your life <br />with friends and family.
               </p>
               <p>
                 Take a picture or video, choose a filter to transform its look
-                <br>and feel, then post to Instagram &mdash; it's that easy. You can
-                <br>even share to Facebook, Twitter, Tumblr and more. It's 
-                <br>a new way to see the world.
+                <br />and feel, then post to Instagram &mdash; it's that easy.
+                You can <br />even share to Facebook, Twitter, Tumblr and more.
+                It's <br />a new way to see the world.
               </p>
               <p>Oh yeah, did we mention it's free?</p>
             </div>
             <img src="images/badge-iphone.png" alt="Apple Store logo" />
-            <img
-              id="store-android-img"
-              src="images/badge-android.png"
-              alt="Android Store logo"
-            />
+            <img src="images/badge-android.png" alt="Android Store logo" />
           </div>
         </div>
       </section>
