Volviendome loca con los margenes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,43 +14,67 @@
   <main>
 
     <div class="centerbox">
+
       <div class="phones">
-        <img src="images/phones.png" >
+        <img src="images/phones.png">
       </div>
       <div class="instagram">
-        <img src="images/brand.png">
-        <img src="images/home.png"> Login in
-        <div class="second">
-          
-          <h1>Capture and Share the World's Moments</h1>
-          <p class="text">
-            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div>
+          <img src="images/brand.png"> 
+          <button class="boton"><img src="images/home.png"> Login in</button>
+          <div class="caja">
+            <h1>Capture and Share the World's Moments</h1>
+            <p class="text">
+              Instagram is a <Strong>fast</Strong>,<strong>beautiful</strong> and <strong>fun</strong> way to share your
+              life with friends and family.
 
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
-            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <p class="text1">
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's
+                that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              </p>
 
-            Oh yeah, did we mention it's free?
-          </p>
-        </div clas="logos">
-          <img src="images/badge-iphone.png" alt="50px">
-          <img src="images/badge-android.png" alt="50px">
+              <p class="text2">
+                Oh yeah, did we mention it's free?
+              </p>
+
+            </p>
+          </div>
         </div>
 
-      
-    </div>
+
+        <div class="logos">
+          <img src="images/badge-iphone.png">
+
+          <img src="images/badge-android.png">
+        </div>
+      </div>
+
+      <footer>
+        <Strong>About Us</Strong>
+
+        <Strong>Support</Strong>
+
+        <Strong>Blog</Strong>
+
+        <Strong>Press</Strong>
+
+        <Strong>API</Strong>
+
+        <Strong>Jobs</Strong>
+
+        <strong>Privacy Terms</strong>
+
+        <strong class="colorcopy">&copy; 2014 Instagram </strong>
 
 
-    <footer>
-      About Us
-      Support
-      Blog
-      Press
-      API
-      Jobs
-      Privacy
-      Terms
-      &copy; 2014 Instagram
-    </footer>
+
+
+
+
+
+
+      </footer>
   </main>
 </body>
 
