Add initial html structure

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="content">
+        <div class="left">
+          <img src="images/phones.png" alt="Image phones with a app's screen" />
+        </div>
+        <div class="right">
+          <div class="header">
+            <header>
+              <div class="logo">
+                <img src="images/brand.png" alt="Instagram logo" />
+              </div>
+              <div class="navigation">
+                <nav>
+                  <div>
+                    <a href="#">Log In</a>
+                  </div>
+                </nav>
+              </div>
+            </header>
+          </div>
+          <div class="description">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="download-links">
+            <a href="#"
+              ><img
+                src="images/badge-iphone.png"
+                alt="Download on the App Store"
+            /></a>
+            <a href="#"
+              ><img src="images/badge-android.png" alt="Get it on Google Play"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="links">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+      </div>
+      <div class="copyrigth">
+        <p>&copy; 2014 Instagram</p>
+      </div>
+    </footer>
+  </body>
 </html>
