--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,6 +10,7 @@
   <div class="background-blue"></div>
   <div class="background-white"></div>
   <body>
+    <div id="wrapper">
     <div id="main-container">
       <div id="phone">
         <img src="images/phones.png" alt="Phone with Instagram App" />
@@ -25,39 +26,32 @@
             >
           </div>
         </div>
-        <div class="underwhite">
-          <div id="white-box">
-            <div id="white-box-content">
-              <h1>Capture and Share<br />the World's Moments</h1>
+        <div id="white-box">
+          <h1>Capture and Share<br />the World's Moments</h1>
 
-              <p>
-                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way
-                to share your life with friends and family.<br />
-              </p>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+            share your life with friends and family.<br />
+          </p>
 
-              <p>
-                Take a picture or video, choose a filter to transform its look
-                and feel, then post to Instagram &mdash; it's that easy. You can
-                even share to Facebook, Twitter, Tumblr and more. It's a new way
-                to see the world.<br />
-              </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.<br />
+          </p>
 
-              <p>Oh yeah, did we mention it's free?<br /></p>
-              <div class="download-buttons">
-                <a href="#"
-                  ><img
-                    src="images/badge-iphone.png"
-                    alt="Download on the App Store"
-                  />
-                </a>
-                <a href="#">
-                  <img
-                    src="images/badge-android.png"
-                    alt="Get it on Google Play"
-                  />
-                </a>
-              </div>
-            </div>
+          <p>Oh yeah, did we mention it's free?<br /></p>
+          <div class="download-buttons">
+            <a href="#"
+              ><img
+                src="images/badge-iphone.png"
+                alt="Download on the App Store"
+              />
+            </a>
+            <a href="#">
+              <img src="images/badge-android.png" alt="Get it on Google Play" />
+            </a>
           </div>
         </div>
       </div>
@@ -78,5 +72,6 @@
         <li>&copy; 2014 Instagram</li>
       </ul>
     </nav>
+  </div>
   </body>
 </html>
