4º Cambios en CSS

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -33,8 +33,8 @@
           
             <p>Oh yeah, did we mention it's free?</p>
           
-            <img src="/starter-code/images/badge-iphone.png" alt="Download on the App Store" class="">
-            <img src="/starter-code/images/badge-android.png" alt="Get it on Google Play" class="">
+            <img src="/starter-code/images/badge-iphone.png" alt="Download on the App Store" class="iphone">
+            <img src="/starter-code/images/badge-android.png" alt="Get it on Google Play" class="android">
           </div>  
         </div>
       </div>
