Todo en su sitio

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,6 +13,7 @@
         <div id="phones">
           <img src="images/phones.png" alt="Instagram Phones" />
         </div>
+        <div class="text-container">
         <div id="login">
           <img src="images/brand.png" alt="Instagram" />
           <button id="login-button" class="button">
@@ -23,7 +24,7 @@
         <div id="text">
           <h2>Capture and Share the World's Moments</h2>
           <p>
-            Instagram is a fast, beautiful and fun way to share your life with
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
             friends and family.
           </p>
           <p>
@@ -33,9 +34,11 @@
             the world.
           </p>
           <p>Oh yeah, did we mention it's free?</p>
-
-          <img src="images/badge-iphone.png" alt="App Store" />
-          <img src="images/badge-android.png" alt="App Store" />
+          <div class="badges">
+          <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store" title="Download on the App Store" /></a>
+          <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play" title="Get it on Google Play" /></a>
+          </div>
+        </div>
         </div>
         <div class="clear"></div>
       </div>
@@ -43,7 +46,16 @@
 
     <footer>
       <div class="container footer">
-        About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+      </ul>
       </div>
     </footer>
   </body>
