--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+<link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
+  <header id="background"></header>
+    <div id="content"></div>
+<div class="phone">
+  <img  src="images/phones.png" alt="phones">
+</div>
+<img src="images/brand.png" class="brand" alt="brand" >
+<img  class= "brand-home" src="images/home.png" alt=""> 
+    <section>
+<div class="caja">
+ <h1>
+  Capture and Share the World's Moments  
+  </h1> 
+  <p class="titulo">
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </p>  
+<p class = "lineas">
+   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</p>
+<p class="lineas p3">
+  Oh yeah, did we mention it's free? 
+</p>
+<img class="imagen-caja" src="images/badge-iphone.png" alt="apple">
+<img class="imagen-caja" src="images/badge-android.png" alt="android">
+</div> 
+</section> 
+<footer>
+   About Us
   Support
   Blog
   Press
   API
   Jobs
   Privacy
-  Terms
-
+  Terms 
   &copy; 2014 Instagram
+</footer>
+
 </body>
 </html>
