Formateado con Prettier

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,31 +14,41 @@
           <img src="images/phones.png" alt="Instagram Phones" />
         </div>
         <div class="text-container">
-        <div id="login">
-          <img src="images/brand.png" alt="Instagram" />
-          <button id="login-button" class="button">
-            <img src="images/home.png" alt="home" />
-            <span>Log in</span>
-          </button>
-        </div>
-        <div id="text">
-          <h2>Capture and Share the World's Moments</h2>
-          <p>
-            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
-            friends and family.
-          </p>
-          <p>
-            Take a picture or video, choose a filter to transform its look and
-            feel, then post to Instagram &mdash; it's that easy. You can even
-            share to Facebook, Twitter, Tumblr and more. It's a new way to see
-            the world.
-          </p>
-          <p>Oh yeah, did we mention it's free?</p>
-          <div class="badges">
-          <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store" title="Download on the App Store" /></a>
-          <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play" title="Get it on Google Play" /></a>
+          <div id="login">
+            <img src="images/brand.png" alt="Instagram" />
+            <button id="login-button" class="button">
+              <img src="images/home.png" alt="home" />
+              <span>Log in</span>
+            </button>
           </div>
-        </div>
+          <div id="text">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+              share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="badges">
+              <a href="#"
+                ><img
+                  src="images/badge-iphone.png"
+                  alt="Download on the App Store"
+                  title="Download on the App Store"
+              /></a>
+              <a href="#"
+                ><img
+                  src="images/badge-android.png"
+                  alt="Get it on Google Play"
+                  title="Get it on Google Play"
+              /></a>
+            </div>
+          </div>
         </div>
         <div class="clear"></div>
       </div>
@@ -55,7 +65,7 @@
           <li><a href="#">Jobs</a></li>
           <li><a href="#">Privacy Terms</a></li>
           <li>&copy; 2014 Instagram</li>
-      </ul>
+        </ul>
       </div>
     </footer>
   </body>
